--- a/src/package.json
+++ b/src/package.json
@@ -25,5 +25,42 @@
   "bugs": {
     "url": "https://github.com/tglima/restapi-node-docker/issues"
   },
-  "homepage": "https://github.com/tglima/restapi-node-docker#readme"
+  "homepage": "https://github.com/tglima/restapi-node-docker#readme",
+  "dependencies": {
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "morgan-body": "^2.6.8",
+    "pg": "^8.10.0",
+    "sequelize": "^6.33.0",
+    "swagger-ui-express": "^4.6.3",
+    "youch": "^3.2.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.22.9",
+    "@babel/core": "^7.22.9",
+    "@babel/node": "^7.22.6",
+    "@babel/plugin-transform-runtime": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/runtime": "^7.22.6",
+    "@types/jest": "^29.5.1",
+    "@types/supertest": "^2.0.12",
+    "eslint": "^8.45.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-security": "^1.6.0",
+    "jest": "^29.5.0",
+    "nodemon": "^3.0.1",
+    "prettier": "^2.8.8",
+    "supertest": "^6.3.3"
+  }
 }
