--- a/src/package.json
+++ b/src/package.json
@@ -2,10 +2,10 @@
   "name": "restapi-node-docker",
   "version": "0.0.1",
   "description": "API Rest desenvolvida com NodeJS e PostgreSQL para rodar dentro de um container docker",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec npx babel-node index.js"
+    "dev": "nodemon --exec npx babel-node ./app/main.js"
   },
   "repository": {
     "type": "git",
