--- a/src/package.json
+++ b/src/package.json
@@ -52,6 +52,7 @@
     "@babel/runtime": "^7.22.6",
     "@types/jest": "^29.5.1",
     "@types/supertest": "^2.0.12",
+    "cpy-cli": "^5.0.0",
     "eslint": "^8.45.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
