--- a/src/package.json
+++ b/src/package.json
@@ -40,6 +40,7 @@
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "moment-timezone": "^0.5.43",
     "morgan-body": "^2.6.8",
     "pg": "^8.10.0",
     "sequelize": "^6.33.0",
