--- a/src/package.json
+++ b/src/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/tglima/restapi-node-docker#readme",
   "dependencies": {
+    "archiver": "^6.0.1",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
