--- a/config.env
+++ b/config.env
@@ -7,3 +7,4 @@ SWAGGER_SERVERS_DESCRIPTION="Ambiente de desenvolvimento"
 SWAGGER_CUSTOM_CSS=".swagger-ui .response-col_links { display: none; }"
 SWAGGER_CUSTOM_SITE_TITLE="TgLima Tech - Node Rest API"
 API_KEY="77be91d8-4bb1ba8e27a9;be24e1ac-0e21e2faff9b;914669d3-229d8912823c;798fed97-4d4faee7ebf7"
+MNG_AUTHENTICATION="dGdsaW1hdGVjaEBlbWFpbC5jb206Um9tYW5vczEwMTA=;"
