--- a/config.env
+++ b/config.env
@@ -3,6 +3,7 @@ NU_PORT=9090
 SWAGGER_INFO_VERSION="0.0.4"
 SWAGGER_URL="http://localhost:{{NU_PORT}}/swagger"
 SWAGGER_INFO_DESCRIPTION="Swagger da API desenvolvida com exemplos e informações de básicas de uso."
+SWAGGER_INFO_DESCRIPTION_MNG="Swagger dos endpoints de administração da API"
 SWAGGER_SERVERS_DESCRIPTION="Ambiente de desenvolvimento"
 SWAGGER_CUSTOM_CSS=".swagger-ui .response-col_links { display: none; }"
 SWAGGER_CUSTOM_SITE_TITLE="TgLima Tech - Node Rest API"
