--- a/src/package.json
+++ b/src/package.json
@@ -71,6 +71,7 @@
     "jest": "^29.5.0",
     "nodemon": "^3.0.1",
     "prettier": "^2.8.8",
+    "rimraf": "^5.0.5",
     "supertest": "^6.3.3"
   }
 }
