refact: Altera o script prebuild do package.json
- Utiliza o pacote rimraf para remover a pasta dist, caso ela exista.

--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec npx babel-node ./app/main.js",
-    "prebuild": "if [ -d ../dist ]; then rm -rf ../dist; fi",
+    "prebuild": "rimraf ../dist",
     "build": "babel ./app -d ../dist && cpy package.json ../dist/ && cpy './app/assets/**' '../dist/assets/'",
     "start": "node main.js"
   },
