--- a/src/package.json
+++ b/src/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec npx babel-node ./app/main.js",
     "prebuild": "rimraf ../dist",
-    "build": "babel ./app -d ../dist && cpy package.json ../dist/ && cpy './app/assets/**' '../dist/assets/'",
+    "build": "babel ./app -d ../dist",
+    "postbuild": "node -e \"const fs = require('fs-extra'); fs.copySync('package.json', '../dist/package.json'); fs.copySync('./app/assets', '../dist/assets/');\"",
     "start": "node main.js"
   },
   "repository": {
@@ -60,7 +61,6 @@
     "@babel/runtime": "^7.22.6",
     "@types/jest": "^29.5.1",
     "@types/supertest": "^2.0.12",
-    "cpy-cli": "^5.0.0",
     "eslint": "^8.45.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
@@ -68,6 +68,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-security": "^1.6.0",
+    "fs-extra": "^11.1.1",
     "jest": "^29.5.0",
     "nodemon": "^3.0.1",
     "prettier": "^2.8.8",
