--- a/src/package.json
+++ b/src/package.json
@@ -7,9 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec npx babel-node ./app/main.js",
     "prebuild": "rimraf ../dist",
-    "build": "babel ./app -d ../dist",
-    "postbuild": "node -e \"const fs = require('fs-extra'); fs.copySync('./app/config', '../dist/config'); fs.copySync('./app/assets', '../dist/assets/'); fs.copySync('package.json', '../dist/package.json');  fs.copySync('Dockerfile', '../dist/Dockerfile');\"",
-    "start": "node main.js"
+    "build": "babel ./app -d ../dist/app",
+    "postbuild": "node -e \"const fs = require('fs-extra'); fs.copySync('./app/config', '../dist/app/config'); fs.copySync('./app/assets', '../dist/app/assets/'); fs.copySync('package.json', '../dist/package.json');  fs.copySync('Dockerfile', '../dist/Dockerfile');\"",
+    "start": "node ./app/main.js"
   },
   "repository": {
     "type": "git",
