--- a/src/package.json
+++ b/src/package.json
@@ -4,7 +4,7 @@
   "description": "API Rest desenvolvida com NodeJS e SQLite para rodar dentro de um container docker",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --detectOpenHandles",
     "dev": "nodemon --exec npx babel-node ./app/main.js",
     "prebuild": "rimraf ../dist",
     "build": "babel ./app -d ../dist/app",
