--- a/src/app/config/test.env
+++ b/src/app/config/test.env
@@ -2,7 +2,7 @@ QT_LIMIT_DELETE=550
 QT_LIMIT_RESULT=10
 LEVEL_COMPRESS_FILE=1
 MAX_ALLOWED_MIN_SERVER=1
-MNG_AUTHENTICATION="ChaveDescodificadaDoSistemaManager;"
+MNG_KEY_AUTH="ChaveDescodificadaDoSistemaManager"
 SWAGGER_SERVERS_DESCRIPTION="Ambiente de testes"
 API_KEY="798fed97-4d4faee7ebf7"
 DATABASE_FILE_NAME="test_database.db"
