chore: Muda MAX_ALLOWED_MIN_SERVER para 6 segundos

--- a/src/app/config/test.env
+++ b/src/app/config/test.env
@@ -1,7 +1,7 @@
 QT_LIMIT_DELETE=2
 QT_LIMIT_RESULT=10
 LEVEL_COMPRESS_FILE=1
-MAX_ALLOWED_MIN_SERVER=1
+MAX_ALLOWED_MIN_SERVER=0.1
 MNG_KEY_AUTH="ChaveDescodificadaDoSistemaManager"
 SWAGGER_SERVERS_DESCRIPTION="Ambiente de testes"
 API_KEY="798fed97-4d4faee7ebf7"
