chore: Altera o valor de API_KEY

--- a/src/app/config/develop.env
+++ b/src/app/config/develop.env
@@ -4,4 +4,4 @@ LEVEL_COMPRESS_FILE=1
 MAX_ALLOWED_MIN_SERVER=1
 MNG_AUTHENTICATION="dGdsaW1hdGVjaEBlbWFpbC5jb206Um9tYW5vczEwMTA="
 SWAGGER_SERVERS_DESCRIPTION="Ambiente de desenvolvimento"
-API_KEY="77be91d8-4bb1ba8e27a9;be24e1ac-0e21e2faff9b;914669d3-229d8912823c;798fed97-4d4faee7ebf7"
+API_KEY="77be91d8-4bb1ba8e27a9"
