--- a/src/app/config/homolog.env
+++ b/src/app/config/homolog.env
@@ -4,4 +4,4 @@ LEVEL_COMPRESS_FILE=2
 MAX_ALLOWED_MIN_SERVER=5
 MNG_AUTHENTICATION="dGdsaW1hdGVjaEBlbWFpbC5jb206Um9tYW5vczEwMTA="
 SWAGGER_SERVERS_DESCRIPTION="Ambiente de homologação"
-API_KEY="914669d3-229d8912823c;798fed97-4d4faee7ebf7"
+API_KEY="be24e1ac-0e21e2faff9b"
