--- a/src/app/config/production.env
+++ b/src/app/config/production.env
@@ -4,4 +4,4 @@ LEVEL_COMPRESS_FILE=4
 MAX_ALLOWED_MIN_SERVER=5
 MNG_AUTHENTICATION="dGdsaW1hdGVjaEBlbWFpbC5jb206Um9tYW5vczEwMTA="
 SWAGGER_SERVERS_DESCRIPTION="Ambiente de produção"
-API_KEY="798fed97-4d4faee7ebf7"
+API_KEY="807Gfe06-3c3dzdD6dae6"
