--- a/.github/workflows/main-pr-automated-tests.yml
+++ b/.github/workflows/main-pr-automated-tests.yml
@@ -16,19 +16,19 @@ jobs:
           working-directory: src
 
       - name: Install dependencies
-        run: npm ci
+        run: npm --prefix src i --exact
 
       - name: Run tests
         run: npm test || exit 1
 
       - name: Comment on Pull Request
         if: ${{ success() }}
-        uses: actions/github-script@v5
+        uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const time = new Date().toLocaleString();
-            github.issues.createComment({
+             await github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -37,19 +37,19 @@ jobs:
 
       - name: Close Pull Request on Test Failure
         if: ${{ failure() }}
-        uses: actions/github-script@v5
+        uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            github.issues.createComment({
-              issue_number: context.issue.number,
+            await github.rest.issues.createComment({
+              issue_number: context.payload.pull_request.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: `${new Date().toLocaleString()}\nOs testes falharam. Este pull request será fechado automaticamente.`
-            })
-            github.pulls.update({
-              pull_number: context.issue.number,
+            });
+            await github.rest.pulls.update({
+              pull_number: context.payload.pull_request.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
               state: 'closed'
-            })
+            });
