--- a/src/package.json
+++ b/src/package.json
@@ -1,10 +1,10 @@
 {
   "name": "restapi-node-docker",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "API Rest desenvolvida com NodeJS e SQLite para rodar dentro de um container docker",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --detectOpenHandles",
     "dev": "nodemon --exec npx babel-node ./app/main.js",
     "prebuild": "rimraf ../dist",
     "build": "babel ./app -d ../dist/app",
@@ -60,6 +60,7 @@
     "@babel/runtime": "^7.22.6",
     "@types/jest": "^29.5.1",
     "@types/supertest": "^2.0.12",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.45.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
