--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,11 +9,11 @@
             "command": "npm run dev",
             "request": "launch",
             "type": "node-terminal",
-            "cwd": "${workspaceFolder}/src",
-            "envFile": "${workspaceFolder}/src/app/config/develop.env",
+            "cwd": "${workspaceFolder}",
+            "envFile": "${workspaceFolder}/app/config/develop.env",
             "skipFiles": [
                 "<node_internals>/**"
-            ],            
+            ],
         }
     ]
 }
